<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:paddingTop="20dp"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp">

        <ImageButton
            android:id="@+id/Button_back"
            android:layout_width="33dp"
            android:layout_height="31dp"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/base"
            android:src="@drawable/flecha_tabla" />

    </TableRow>

    <TableRow android:background="@color/gray">

        <TextView
            android:id="@+id/txt_tablet_invo"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/txt_tablet_invo"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_Subt"
            android:layout_column="2"
            android:padding="4dip"
            android:text="@string/txt_Subt"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_day"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/txt_day"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_one_buy"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_stay"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/txt_stay"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_2_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_mass"
            android:layout_width="150dp"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_one"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_3_buy"
            android:layout_column="2"
            android:layout_gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textAlignment="gravity"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_seven"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_4_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="value for kids"

            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_5_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_recre"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_three"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_6_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_gift"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_five"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_7_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_vip"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_four"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_8_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_two"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_9_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_room"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/radio_six"
            android:textColor="@color/cafe" />

        <TextView
            android:id="@+id/txt_precio_10_buy"
            android:layout_column="2"
            android:gravity="left"
            android:padding="4dip"
            android:text="0.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text=""
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sub"
            android:textColor="@color/cafe" />

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="4dip"
            android:text="$ 2.849.00"
            android:textColor="@color/cafe" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_disc"
            android:textColor="@color/cafe" />

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="4dip"
            android:text="$300.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_iva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_iva"
            android:textColor="@color/cafe" />

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="4dip"
            android:text="$ 200.00"
            android:textColor="@color/cafe" />
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total"
            android:textColor="@color/cafe" />

        <TextView
            android:layout_column="1"
            android:gravity="left"
            android:padding="4dip"
            android:text="$ 2.749.00"
            android:textColor="@color/cafe"
            android:textStyle="bold|italic" />

    </TableRow>


    <Button
        android:id="@+id/btn_pagar"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="34dp"

        android:backgroundTint="@color/white"

        android:text="@string/btn_tablet"
        android:textColor="@color/cafe" />


</TableLayout>