<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="177dp"
        android:layout_height="155dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="7dp"
        app:srcCompat="@drawable/mundo" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/txt_reservat"
        android:layout_marginBottom="-11dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/txt_reservat"
        android:layout_width="283dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/pinyon_script"
        android:gravity="center"
        android:text="@string/txt_reservat"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/inp_name"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="211dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"

        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inp_email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="Email"

        android:inputType="number"
        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inp_days"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="19dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"

        android:hint="Days of stay"
        android:inputType="number"
        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inp_kicks"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="-373dp"
        android:ems="10"
        android:hint="Number of children "
        android:inputType="number"
        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner_cargo"
        android:layout_width="362dp"
        android:layout_height="37dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="410dp"
        android:dropDownSelector="@color/black"
        android:entries="@array/rooms"
        android:prompt="@string/spinner_cargo"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="167dp"

        android:layout_height="78dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignEnd="@+id/spinner_cargo"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="198dp"
        android:text="Vehicle"
        android:textColor="@color/cafe"
        android:textColorHint="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnreserv"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignEnd="@+id/spinner_cargo"
        android:layout_marginTop="582dp"
        android:layout_marginEnd="107dp"
        android:backgroundTint="#FFFFFF"

        android:text="@string/btnreserv"
        android:textColor="@color/cafe"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/inp_phone"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="180dp"
        android:ems="10"

        android:hint="Phone"
        android:inputType="phone"
        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inp_cc"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentEnd="true"

        android:layout_marginEnd="214dp"
        android:layout_marginBottom="-151dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="number"
        android:textColor="@color/cafe"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="123dp"
        android:layout_height="112dp"
        android:layout_above="@+id/inp_phone"
        android:layout_marginBottom="-5dp"
        app:srcCompat="@drawable/reshot_icon_5_stars_gr43f7skch" />

    <Spinner
        android:id="@+id/spinner_number"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inp_cc"
        android:layout_below="@+id/toolbar"
        android:layout_alignEnd="@+id/inp_phone"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/cafe"
        android:entries="@array/phone_identifiers_array"
        android:gravity="start"
        android:textAlignment="textStart"

        />


</RelativeLayout>